update: estruturando filtro de chaves